--- a/signin/index.html
+++ b/signin/index.html
@@ -33,7 +33,7 @@
               <label class="sign-input-label">비밀번호</label>
               <input class="password-input" type="password" />
               <div class="error-message-password"></div>
-              <button class="eye-button" type="button">
+              <button class="password-eye-button" type="button">
                 <img src="../image/eye-off.jpg" />
               </button>
             </div>
@@ -53,8 +53,9 @@
         </div>
       </div>
 
-    <script type="module" src="../common.js"></script>
-    <script type="module" src="./app.js"></script>
+      <script type="module" src="../js/auth.js"></script>
+      <script type="module" src="../js/uicontroller.js"></script>
+      <script type="module" src="./app.js"></script>
   </div>
   </body>
 </html>
