Part1 장성훈 week5 (#194)
* 2주차 수정

* 3주차 시작

* 4주차 시작

* 이메일, 패스워드 에러메세지 기능

* focusout 이벤트 핸들러 수정

* 폴더 구조변경

* valid 파일 구조 변경

* (index.js)let 변수를 const로 변경

* 로그인, 회원가입 HTML, CSS 클래스네임 수정

* 회원가입, 로그인 눈 position 수정

* index.html classname 수정

* 이메일, 패스워드 선택 수정(class -> type)

* 에러 메세지 출력함수 수정

* (signin.js) dom과 로직 분리

* signup 버튼 클래스네임 변경

* (signup.js)이메일 validate 클래스

* (signup.css , js) 에러메세지 스타일수정, 패스워드 유효성검사

* 비밀번호 확인 수정

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -13,7 +13,8 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
 
-    <link rel="stylesheet" href="../login/signin.css" />
+    <link rel="stylesheet" href="./signup.css" />
+
     <link rel="stylesheet" href="../styles/global.css" />
   </head>
   <body>
@@ -37,6 +38,8 @@
           <div class="form-group">
             <label class="form-group__label">이메일</label>
             <input class="form-group__email" type="email" />
+            <p class="form-group__error-message--email"></p>
+
           </div>
           <div class="form-group password-container">
             <label class="form-group__label">비밀번호</label>
@@ -44,16 +47,21 @@
             <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
+            <p class="form-group__error-message--password"></p>
           </div>
           <div class="form-group password-container">
             <label class="form-group__label">비밀번호 확인</label>
-            <input class="form-group__password" type="password" />
+            <input class="form-group__password-confirm" type="password" />
             <button class="form-group__eye-button" type="button">
               <img src="../assets/images/eye-off.svg" />
             </button>
+            <p class="form-group__error-message--password-confirm"></p>
           </div>
         </div>
-        <button class="cta" type="submit">회원가입</button>
+        <button class="form-group__signup-button" type="submit">
+          회원가입
+        </button>
+
       </form>
       <div class="sns-box">
         <span class="sns-text">다른 방식으로 가입하기</span>
@@ -67,5 +75,7 @@
         </div>
       </div>
     </div>
+    <script src="./signup.js"></script>
+
   </body>
 </html>
