Revert "[우제윤] Week5"

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <div class="main-container__img-box">
         <img class="main-container__img-box__img" src="./assets/images/image3.png">
       </div>
+      <img class="main-contents-img" src="./img/image3.png">
     </div>
     <!-- 4번 내용 -->
     <div class="container main-container">
