--- a/login/index.html
+++ b/login/index.html
@@ -24,20 +24,18 @@
       회원이 아니신가요? <a class="btn-goTo-login-signUp" href="../signup/index.html">회원 가입하기</a>
     </div>
     <div class="login-signUp-form__body">
-      <form id="form">
-        <label name="email">이메일
-          <input class="input-email" type="email" name="email" id="email">
+      <form>
+        <label name="email">이메일<br>
+          <input class="input-email" type="email" name="email" id="email"><br>
           <p class="error-message err-email"></p>
         </label>
-        <label name="password" class="login-signUp-form__body__password-label"> 비밀번호
+        <label name="password"> 비밀번호<br>
           <input class="input-password" type="password" name="password" id="password">
           <p class="error-message err-password"></p>
-          <button id="password-toggle" class="eye-button eyeBtnLogin" type="button">
-            <img src="../assets/images/eye-off.svg" />
-          </button>
         </label>
-        <button type="submit" class="btn btn-login-signUp btnLogin" id="login">로그인</button>
-      </form>        
+        <button type="button" class="btn btn-login-signUp btnLogin" id="login">로그인</button>
+      </form>
+      
     </div>
     <div class="login-form__social">
       소셜 로그인
