--- a/signin/index.html
+++ b/signin/index.html
@@ -28,11 +28,11 @@
               <input class="email-input" type="email" />
               <div class="error-message-email"></div>
             </div>
-
             <div class="sign-form-inputs-box sign-password">
               <label class="sign-input-label">비밀번호</label>
               <input class="password-input" type="password" />
               <div class="error-message-password"></div>
+              <button class="eye-button" type="button">
               <button class="password-eye-button" type="button">
                 <img src="../image/eye-off.jpg" />
               </button>
@@ -52,7 +52,6 @@
           </div>
         </div>
       </div>
-
       <script type="module" src="../js/auth.js"></script>
       <script type="module" src="../js/uicontroller.js"></script>
       <script type="module" src="./app.js"></script>
