feat: Add sign out feature

--- a/Linkbrary/src/folder.html
+++ b/Linkbrary/src/folder.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/scss/layouts/_header.scss">
-    <link rel="stylesheet" href="assets/scss/pages/_home.scss">
+
     <link rel="stylesheet" href="assets/scss/just-for-fun/blackJack.scss">
 </head>
 
@@ -19,10 +19,11 @@
                 </a>
                 <p class="blind">Linkbrary</p>
             </h1>
-            <a href="pages/signin/index.html" class="btn header-login">로그인</a>
+            <a href="pages/signin/index.html" class="btn header-login" id="sign-out-btn">로그아웃</a>
+
         </header>
 
-        <h1>LOOKING FOR FOLDER PAGE?</h1>
+        <h2>LOOKING FOR FOLDER PAGE?</h2>
         <h2 style="text-align: center;">그런건 없습니다<br>대신 블랙잭 한판 어떠신가요?</h2>
         <ul class="rules">
             <li>6덱 블랙잭입니다, 덱이 50장 미만이면 자동셔플됩니다</li>
@@ -101,6 +102,7 @@
         </div>
 
     </main>
+    <script type="module" src="folder.js"></script>
     <script src="js/justForFun/blackJack.js">
     </script>
 </body>
