--- a/Linkbrary/src/index.html
+++ b/Linkbrary/src/index.html
@@ -26,7 +26,8 @@
             </a>
             <span class="blind">Linkbrary</span>
         </h1>
-        <a href="pages/signin/index.html" class="btn header-login">로그인</a>
+        <a href="pages/signin/index.html" id="sign-in-btn" class="btn header-login">로그인</a>
+        <a href="pages/signin/index.html" id="sign-out-btn" class="btn header-login blind">로그아웃</a>
     </header>
     <main>
         <section class="page-sample-section">
@@ -532,6 +533,7 @@
             </div>
         </div>
     </footer>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
