refactor: Change links url in folder page

--- a/Linkbrary/src/pages/folder/index.html
+++ b/Linkbrary/src/pages/folder/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/scss/layouts/_header.scss">
+    <link rel="stylesheet" href="../../assets/scss/layouts/_header.scss">
 
-    <link rel="stylesheet" href="assets/scss/just-for-fun/blackJack.scss">
+    <link rel="stylesheet" href="../../assets/scss/just-for-fun/blackJack.scss">
 </head>
 
 <body>
     <main>
         <header class="main-header">
             <h1>
-                <a href="index.html">
-                    <img src="assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
+                <a href="../../index.html">
+                    <img src="../../assets/img/logo.svg" alt="Linkbrary" class="sign-logo">
                 </a>
                 <p class="blind">Linkbrary</p>
             </h1>
-            <a href="pages/signin/index.html" class="btn header-login" id="sign-out-btn">로그아웃</a>
+            <a href="../signin/index.html" class="btn header-login" id="sign-out-btn">로그아웃</a>
 
         </header>
 
@@ -103,7 +103,7 @@
 
     </main>
     <script type="module" src="folder.js"></script>
-    <script src="js/justForFun/blackJack.js">
+    <script src="../../js/justForFun/blackJack.js">
     </script>
 </body>
 
