--- a/Linkbrary/src/index.html
+++ b/Linkbrary/src/index.html
@@ -38,7 +38,7 @@
                 </span>
                 관리해 보세요
             </h2>
-            <a href="pages/signup/index.html" class="btn link-add">링크 추가하기</a>
+            <a href="pages/folder/index.html" class="btn link-add">링크 추가하기</a>
             <div class="page-sample">
                 <img src="assets/img/_dim.png" alt="" class="page-sample-dim-effect">
                 <div class="page-sample-content">
