--- a/mission/signup.html
+++ b/mission/signup.html
@@ -2,17 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>회원가입</title>
     <link rel="stylesheet" href="./src/sign.css" />
   </head>
   <body>
     <header>
       <a class="logo-link" href="index.html">
-        <img class="header-logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+        <img
+          class="header-logo"
+          src="./images/logo.svg"
+          alt="홈으로 연결된 Linkbrary 로고"
+        />
       </a>
       <p class="header-message">
-        이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
+        이미 회원이신가요?<a class="header-link" href="signin.html"
+          >로그인 하기</a
+        >
       </p>
     </header>
     <div class="sign-box">
@@ -25,17 +31,35 @@
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <div class="eye-button-container">
-              <input class="sign-input" type = "password" name="password" id="password" />
-              <button class="eye-button" type="button" id="showPassword"></button>
+            <div class="paswword-input-container">
+              <input
+                class="sign-input"
+                type="password"
+                name="password"
+                id="password"
+              />
+              <button
+                class="eye-button"
+                type="button"
+                id="showPassword"
+              ></button>
             </div>
             <p class="error-msg" id="pwd-error"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <div class="eye-button-container">
-              <input class="sign-input" type = "password" name="passwordCheck" id="passwordCheck" />
-              <button class="eye-button" type="button" id="showPasswordCheck"></button>
+            <div class="paswword-input-container">
+              <input
+                class="sign-input"
+                type="password"
+                name="passwordCheck"
+                id="passwordCheck"
+              />
+              <button
+                class="eye-button"
+                type="button"
+                id="showPasswordCheck"
+              ></button>
             </div>
             <p class="error-msg" id="pwdCheckerError"></p>
           </div>
