5주차 피드백 반영

--- a/signin/index.html
+++ b/signin/index.html
@@ -34,7 +34,7 @@
               <div class="error-message-password"></div>
               <button class="eye-button" type="button">
               <button class="password-eye-button" type="button">
-                <img src="../image/eye-off.jpg" />
+                <img id="eye-icon" src="../image/eye-off.jpg" />
               </button>
             </div>
           </div>
