Feat: 회원가입, 로그인 서버 validation 작업하기
- 분리되어있던 validation.js 파일 삭제,  signin, signup 파일에 추가하여
  작업
- accessToken 받아, 로그인, 회원가입 떄 확인하고 접근 못하게
  accessControl.js 파일 작업(수정 중)

--- a/signin.html
+++ b/signin.html
@@ -32,12 +32,12 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
+  <script defer src="js/utils/accessControl.js"></script>
   <script defer src="js/module/join/addErrorMessage.js"></script>
   <script defer src="js/module/join/removeErrorMassage.js"></script>
   <script defer src="js/module/join/validation.js"></script>
-  <script defer src="js/module/join/join.js"></script>
+  <script defer src="js/module/join/password_toggle.js"></script>
   <script defer src="js/signin.js"></script>
-  <script defer src="js/password_toggle.js"></script>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
             </div>
             <p class="error__text"></p>
           </div>
-          <button class="btn_signin btn__gradient__lg" disabled>로그인</button>
+          <button class="btn_signin btn__gradient__lg">로그인</button>
         </div>
       </form>
       <!-- sns 로그인 -->
