--- a/signup.html
+++ b/signup.html
@@ -32,12 +32,12 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
+  <script defer src="js/utils/accessControl.js"></script>
   <script defer src="js/module/join/addErrorMessage.js"></script>
   <script defer src="js/module/join/removeErrorMassage.js"></script>
   <script defer src="js/module/join/validation.js"></script>
-  <script defer src="js/module/join/join.js"></script>
+  <script defer src="js/module/join/passwordToggle.js"></script>
   <script defer src="js/signup.js"></script>
-  <script defer src="js/password_toggle.js"></script>
 </head>
 
 <body>
@@ -82,7 +82,7 @@
             </div>
             <p class="error__text">asdf</p>
           </div>
-          <button class="btn_signup btn__gradient__lg" disabled>회원가입</button>
+          <button class="btn_signup btn__gradient__lg">회원가입</button>
         </div>
       </form>
       <!-- sns 가입하기 -->
