feat: footer 추가

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,9 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-
-    <link href="css/nav.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <meta
       name="description"
       content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요."
@@ -27,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://seungryeolbaek-sprint-weekly.netlify.app/images/library.png"
+      content="https://seungryeolbaek-sprint-weekly.netlify.app/Images/library.png"
     />
     <meta
       property="og:url"
@@ -42,7 +40,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://seungryeolbaek-sprint-weekly.netlify.app/images/library.png"
+      content="https://seungryeolbaek-sprint-weekly.netlify.app/Images/library.png"
     />
     <meta
       property="twitter:url"
@@ -52,6 +50,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
