--- a/signin.html
+++ b/signin.html
@@ -15,22 +15,22 @@
           <img class="header-logo" src="./images/logo.svg" alt=" 로고 이미지">
         </a>
       </h1>
-      <div class="signup-check-box">
-        <span class="signup-check-text">회원이 아니신가요?</span>
+      <div class="sign-check-box">
+        <span class="sign-check-text">회원이 아니신가요?</span>
         <a class="signiup-link" href="signup.html">회원가입하기</a>
       </div>
     </header>
-    <div class="signup-box">
+    <div class="sign-box">
       <form id="form">
-        <div class="signup-input-boxs">
-          <div class="signup-input-box">
-            <label for="signup-email">이메일</label>
-            <input id="signup-email" class="signin-email" name="signup-email" type="email">
+        <div class="sign-input-boxs">
+          <div class="sign-input-box">
+            <label for="sign-email">이메일</label>
+            <input id="sign-email" class="sign-email" name="sign-email" type="email">
             <div class="email-err hide err-font">이메일을 입력해주세요.</div>
-          <div class="signup-input-box">
-            <label for="signup-password">비밀번호</label>
-            <div class="signup-input-password-box">
-              <input id="signup-password" class="signin-password" name="signup-password" type="password">
+          <div class="sign-input-box">
+            <label for="sign-password">비밀번호</label>
+            <div class="sign-input-password-box">
+              <input id="sign-password" class="sign-password" name="sign-password" type="password">
               <button class="password-button" type="button">
                 <img class="eye-on hide" src="./images/eye-on.svg" alt="패스워드 눈 뜬 모양 이미지">
                 <img class="eye-off" src="./images/eye-off.svg" alt="패스워드 눈 감은 모양 이미지">
@@ -41,19 +41,19 @@
           <button type='submit' class="cta">로그인</button>
         </div>
       </form>
-      <div class="other-signup">
-        <span class="other-signup-text">소셜 로그인</span>
+      <div class="other-sign">
+        <span class="other-sign-text">소셜 로그인</span>
         <div class="icon">
           <div class="icon-box">
             <a href="https://www.google.com/" target="_blank">
-              <img src="./images/signin-googleback.svg">
-              <img class="box-in-icon" src="./images/signin-google.png">
+              <img src="./images/sign-googleback.svg">
+              <img class="box-in-icon" src="./images/sign-google.png">
             </a>
           </div>
           <div class="icon-box">
             <a href="https://www.kakaocorp.com/page/" target="_blank">
-              <img src="./images/signin-kakaoback.svg">
-              <img class="box-in-icon" src="./images/signin-kakao.svg">
+              <img src="./images/sign-kakaoback.svg">
+              <img class="box-in-icon" src="./images/sign-kakao.svg">
             </a>
           </div>
         </div>
