6주차 기본 기능 구현

--- a/signin/index.html
+++ b/signin/index.html
@@ -55,6 +55,7 @@
       <script type="module" src="../js/auth.js"></script>
       <script type="module" src="../js/uicontroller.js"></script>
       <script type="module" src="./app.js"></script>
+      <script type="module" src="./api.js"></script>
   </div>
   </body>
 </html>
