--- a/signup/index.html
+++ b/signup/index.html
@@ -72,5 +72,6 @@
     <script type="module" src="../js/auth.js"></script>
     <script type="module" src="../js/uicontroller.js"></script>
     <script type="module" src="./app.js"></script>
+    <script type="module" src="./api.js"></script>
   </body>
 </html>
