--- a/html/signup.html
+++ b/html/signup.html
@@ -1,70 +1,119 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linkbrary</title>
-    <link rel="stylesheet" href="../css/form.css">
-    <link rel="stylesheet" href="../css/pages/login/login.css">
-</head>
-<body>
-    <div class="login-body">
-        <div class="login-con">
-            <div class="login-header">
-                <h2 class="login-logo">
-                    <a href="../">
-                        <img src="../images/svg/Linkbrary.svg" alt="Linkbrary">
-                    </a>
-                </h2>
-                <p>이미 회원이신가요? <a href="./signin.html" class="underline">로그인 하기</a></p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Linkbrary</title>
+        <link rel="stylesheet" href="../css/form.css" />
+        <link rel="stylesheet" href="../css/pages/login/login.css" />
+    </head>
+    <body>
+        <div class="login-body">
+            <div class="login-con">
+                <div class="login-header">
+                    <h2 class="login-logo">
+                        <a href="../">
+                            <img
+                                src="../images/svg/Linkbrary.svg"
+                                alt="Linkbrary"
+                            />
+                        </a>
+                    </h2>
+                    <p>
+                        이미 회원이신가요?
+                        <a href="./signin.html" class="underline"
+                            >로그인 하기</a
+                        >
+                    </p>
+                </div>
+                <article class="con-article">
+                    <form action="" class="login-form signup-form">
+                        <div class="login-div input-login-form01">
+                            <label for="email">이메일</label>
+                            <input
+                                id="email"
+                                name="email"
+                                type="email"
+                                placeholder="codeit@codeit.com"
+                                class="emailInput"
+                            />
+                            <div class="login-caution email-caution"></div>
+                        </div>
+                        <div class="login-div input-login-form01">
+                            <label for="password">비밀번호</label>
+                            <div class="input-icon-div">
+                                <input
+                                    id="password"
+                                    name="password"
+                                    type="password"
+                                    class="passwordInput"
+                                />
+                                <button
+                                    type="button"
+                                    class="input-icon off passwordIcon"
+                                >
+                                    <img
+                                        src="../images/icon/eye-off.png"
+                                        alt="비밀번호 보이기"
+                                    />
+                                </button>
+                            </div>
+                            <div class="login-caution password-caution"></div>
+                        </div>
+                        <div class="login-div input-login-form01">
+                            <label for="verifyPassword">비밀번호 확인</label>
+                            <div class="input-icon-div">
+                                <input
+                                    id="verifyPassword"
+                                    name="verifyPassword"
+                                    type="password"
+                                    class="verifypasswordInput"
+                                />
+                                <button
+                                    type="button"
+                                    class="input-icon off verifyPasswordIcon"
+                                >
+                                    <img
+                                        src="../images/icon/eye-off.png"
+                                        alt="비밀번호 보이기"
+                                    />
+                                </button>
+                            </div>
+                            <div
+                                class="login-caution verify-password-caution"
+                            ></div>
+                        </div>
+                        <button
+                            class="login-button btn-form01 width-full signup-button"
+                            type="submit"
+                        >
+                            회원가입
+                        </button>
+                        <div class="social-login flex-box">
+                            <span>다른 방식으로 가입하기</span>
+                            <ul class="flex-box social-con-wrap">
+                                <li class="google-login social-con">
+                                    <a href="https://www.google.com/">
+                                        <img
+                                            src="../images/icon/google.png"
+                                            alt="구글 로그인 하기"
+                                        />
+                                    </a>
+                                </li>
+                                <li class="kakao-login social-con">
+                                    <a href="https://www.kakaocorp.com/page/">
+                                        <img
+                                            src="../images/icon/kakao.png"
+                                            alt="카카오 로그인 하기"
+                                        />
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
+                </article>
             </div>
-            <article class="con-article">
-                <form action="" class="login-form signup-form">
-                    <div class="login-div input-login-form01">
-                        <label for="email">이메일</label>
-                        <input id="email" name="email" type="email" placeholder="codeit@codeit.com" class="emailInput">
-                        <div class="login-caution email-caution"></div>
-                    </div>
-                    <div class="login-div input-login-form01">
-                        <label for="password">비밀번호</label>
-                        <div class="input-icon-div">
-                            <input id="password" name="password" type="password" class="passwordInput">
-                            <button type="button" class="input-icon off passwordIcon">
-                                <img src="../images/icon/eye-off.png" alt="비밀번호 보이기">
-                            </button>
-                        </div>
-                        <div class="login-caution password-caution"></div>
-                    </div>
-                    <div class="login-div input-login-form01">
-                        <label for="verifyPassword">비밀번호 확인</label>
-                        <div class="input-icon-div">
-                            <input id="verifyPassword" name="verifyPassword" type="password" class="verifypasswordInput">
-                            <button type="button" class="input-icon off verifyPasswordIcon">
-                                <img src="../images/icon/eye-off.png" alt="비밀번호 보이기">
-                            </button>
-                        </div>
-                        <div class="login-caution verifyPassword-caution"></div>
-                    </div>
-                    <button class="login-button btn-form01 width-full signup-button" type="submit">회원가입</button>
-                    <div class="social-login flex-box">
-                        <span>다른 방식으로 가입하기</span>
-                        <ul class="flex-box social-con-wrap">
-                            <li class="google-login social-con">
-                                <a href="https://www.google.com/">
-                                    <img src="../images/icon/google.png" alt="구글 로그인 하기">
-                                </a>
-                            </li>
-                            <li class="kakao-login social-con">
-                                <a href="https://www.kakaocorp.com/page/">
-                                    <img src="../images/icon/kakao.png" alt="카카오 로그인 하기">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </form>
-            </article>
         </div>
-    </div>
-    <script src="../js/auth/signup.js" type="module"></script>
-</body>
+        <script src="../js/auth/signup.js" type="module"></script>
+    </body>
 </html>
