함수와 변수 코드 정리

--- a/html/signup.html
+++ b/html/signup.html
@@ -13,17 +13,12 @@
                 <div class="login-header">
                     <h2 class="login-logo">
                         <a href="../">
-                            <img
-                                src="../images/svg/Linkbrary.svg"
-                                alt="Linkbrary"
-                            />
+                            <img src="../images/svg/Linkbrary.svg" alt="Linkbrary" />
                         </a>
                     </h2>
                     <p>
                         이미 회원이신가요?
-                        <a href="./signin.html" class="underline"
-                            >로그인 하기</a
-                        >
+                        <a href="./signin.html" class="underline">로그인 하기</a>
                     </p>
                 </div>
                 <article class="con-article">
@@ -48,14 +43,8 @@
                                     type="password"
                                     class="passwordInput"
                                 />
-                                <button
-                                    type="button"
-                                    class="input-icon off passwordIcon"
-                                >
-                                    <img
-                                        src="../images/icon/eye-off.png"
-                                        alt="비밀번호 보이기"
-                                    />
+                                <button type="button" class="input-icon off passwordIcon">
+                                    <img src="../images/icon/eye-off.png" alt="비밀번호 보이기" />
                                 </button>
                             </div>
                             <div class="login-caution password-caution"></div>
@@ -67,21 +56,13 @@
                                     id="verifyPassword"
                                     name="verifyPassword"
                                     type="password"
-                                    class="verifypasswordInput"
+                                    class="verify-password-input"
                                 />
-                                <button
-                                    type="button"
-                                    class="input-icon off verifyPasswordIcon"
-                                >
-                                    <img
-                                        src="../images/icon/eye-off.png"
-                                        alt="비밀번호 보이기"
-                                    />
+                                <button type="button" class="input-icon off verifyPasswordIcon">
+                                    <img src="../images/icon/eye-off.png" alt="비밀번호 보이기" />
                                 </button>
                             </div>
-                            <div
-                                class="login-caution verify-password-caution"
-                            ></div>
+                            <div class="login-caution verify-password-caution"></div>
                         </div>
                         <button
                             class="login-button btn-form01 width-full signup-button"
