새로운 파일 apply.js추가 및 함수 분리 후 사용으로 코드 간소화

--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
                 />
               </button>
             </div>
-            <div class="password-sign-err hide err-font">
+            <div class="password-err hide err-font">
               비밀번호는 영문,숫자 조합 8자 이상 입력해 주세요.
             </div>
           </div>
@@ -72,20 +72,20 @@
                 name="sign-password-check"
                 type="password"
               />
-              <button class="password-button" type="button">
+              <button class="password-check-button" type="button">
                 <img
-                  class="eye-on hide"
+                  class="eye-on-check hide"
                   src="./images/eye-on.svg"
                   alt="패스워드 눈 뜬 모양 이미지"
                 />
                 <img
-                  class="eye-off"
+                  class="eye-off-check"
                   src="./images/eye-off.svg"
                   alt="패스워드 눈 감은 모양 이미지"
                 />
               </button>
             </div>
-            <div class="password-sign-fail hide err-font">
+            <div class="password-err-check hide err-font">
               비밀번호가 일치하지 않아요.
             </div>
           </div>
