feat: 랜딩페이지 내용 컴포넌트로 구현

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-	<link
+    <link
       href="https://fonts.googleapis.com/css?family=Abel"
       rel="stylesheet"
     />
-	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Acme"
+      rel="stylesheet"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
