--- a/signin.html
+++ b/signin.html
@@ -25,14 +25,13 @@
               class="input-text"
               id="email"
               type="email"
-              value=""
               autocomplete="off"
             />
             <span class="error-msg" id="email-error-msg"></span>
           </div>
           <div class="sign-input password">
             <label class="sign-label" for="pwd">비밀번호</label>
-            <input class="input-text" id="pwd" type="password" value="" />
+            <input class="input-text" id="pwd" type="password" />
             <span class="error-msg" id="pwd-error-msg"></span>
             <button class="eye-btn" id="pwd-toggle" type="button">
               <img src="./img/signin/eye-off.svg" alt="eye-off-icon" />
