--- a/3Week/folder.html
+++ b/3Week/folder.html
@@ -2,14 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>folder</title>
+    <title>폴더</title>
   </head>
-  <body>
-    <div>
-      <a href="index.html"
-        >im folder<br />
-        back</a
-      >
-    </div>
-  </body>
 </html>
