--- a/3Week/signup.html
+++ b/3Week/signup.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>회원가입</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link
       rel="stylesheet"
       type="text/css"
@@ -15,26 +19,31 @@
       <a class="logo-link" href="index.html">
         <img class="header-logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
       </a>
-      <p class="header-message">이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a></p>
+      <p class="header-message">
+        이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
+      </p>
     </header>
     <div class="sign-box">
-      <form class="sign-form">
+      <form id="form" class="sign-form">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input id="email" class="sign-input" />
+            <p id="email-error-message" class="error-message"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
-            <button class="eye-button" type="button">
+            <input id="password" class="sign-input" type="password" />
+            <p id="password-error-message" class="error-message"></p>
+            <button id="password-toggle" class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type="password" />
-            <button class="eye-button" type="button">
+            <input id="confirm-password" class="sign-input" type="password" />
+            <p id="confirm-password-error-message" class="error-message"></p>
+            <button id="confirm-password-toggle" class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
@@ -53,5 +62,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="./src/signup.js"></script>
   </body>
 </html>
