스프린트 5기 위클리 미션 (6주차) - 5주차 미션 완료

--- a/week2/signin.html
+++ b/week2/signin.html
@@ -28,13 +28,9 @@
                 <div class="wrap-input">
                     <label>비밀번호</label>
                     <input type="password" class="input-txt" id="password" name="password" placeholder="ㆍㆍㆍㆍㆍㆍ">
-                    <object data="/static/images/auth/eye-off.svg" type="image/svg+xml" class="eye eye-off">
-                        <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye eye-off">
-                    </object>
-                    <object data="/static/images/auth/eye-on.svg" type="image/svg+xml" class="eye eye-on disable">
-                        <img src="/static/images/auth/eye-on.png" alt="비밀번호 표시" class="cursor-point" class="eye eye-on">
-                    </object>
-                    <button type="button" id="passwordHidden"></button>
+                    <button type="button" class="password-icon-btn">
+                        <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="icon-eye eye-off password">
+                    </button>
                     <p id="passwordErrorText" class="txt-wrong"></p>
                 </div>
                 <button type="submit" id="loginBtn" class="primary-btn lg">로그인</button>
@@ -56,6 +52,6 @@
             </div>
         </footer>
 
-        <script type="text/javascript" src="/static/js/signin.js"></script> 
+        <script type="module" src="/static/js/auth/signin.js"></script>
     </body>
 </html>
