--- a/week2/signup.html
+++ b/week2/signup.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="utf-8">
-        <title>Linkbrary 회원가임</title>
+        <title>Linkbrary 회원가입</title>
         <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
         <link rel="stylesheet" href="/static/css/font.css">
         <link rel="stylesheet" href="/static/css/common.css">
@@ -19,26 +19,30 @@
             <p>이미 회원이신가요? <a href="/signin.html" class="link">로그인 하기</a></p>
         </header>
         <main>
-            <div class="wrap-input">
-                <p>이메일</p>
-                <input type="text" class="input-txt" placeholder="codeit@codeit.com">
-            </div>
-            <div class="wrap-input">
-                <p>비밀번호</p>
-                <input type="password" class="input-txt" placeholder="ㆍㆍㆍㆍㆍㆍ">
-                <object data="/static/images/auth/eye-off.svg" type="image/svg+xml" class="eye-off">
-                    <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye-off">
-                </object>
-            </div>
-            <div class="wrap-input">
-                <p>비밀번호 확인</p>
-                <input type="password" class="input-txt wrong" placeholder="ㆍㆍㆍㆍㆍㆍ">
-                <object data="/static/images/auth/eye-off.svg" type="image/svg+xml" class="eye-off">
-                    <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="cursor-point" class="eye-off">
-                </object>
-            </div>
-            <p class="txt-wrong">비밀번호가 다릅니다</p>
-            <a href="/signup.html" class="primary-btn lg">회원가입</a>
+            <form action="/" id="joinForm">
+                <div class="wrap-input">
+                    <label>이메일</label>
+                    <input type="text" class="input-txt" id="email" name="email" placeholder="codeit@codeit.com">
+                    <p id="emailErrorText" class="txt-wrong"></p>
+                </div>
+                <div class="wrap-input">
+                    <label>비밀번호</label>
+                    <input type="password" class="input-txt" id="password" name="password" placeholder="ㆍㆍㆍㆍㆍㆍ">
+                    <button type="button" class="password-icon-btn">
+                        <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="icon-eye eye-off password">
+                    </button>
+                    <p id="passwordErrorText" class="txt-wrong"></p>
+                </div>
+                <div class="wrap-input">
+                    <label>비밀번호 확인</label>
+                    <input type="password" class="input-txt" id="passwordCheck" name="passwordCheck" placeholder="ㆍㆍㆍㆍㆍㆍ">
+                    <button type="button" class="password-icon-btn">
+                        <img src="/static/images/auth/eye-off.png" alt="비밀번호 표시" class="icon-eye eye-off password-check">
+                    </button>
+                    <p id="passwordCheckErrorText" class="txt-wrong"></p>
+                </div>
+                <button type="submit" id="joinBtn" class="primary-btn lg">회원가입</button>
+            </form>
         </main>
         <footer>
             <p>다른 방식으로 가입하기</p>
@@ -55,5 +59,7 @@
                 </a>
             </div>
         </footer>
+
+        <script type="module" src="/static/js/auth/signup.js"></script>
     </body>
 </html>
