스프린트 5기 위클리 미션 (6주차) - 6주차 미션 완료

--- a/week2/signup.html
+++ b/week2/signup.html
@@ -22,7 +22,7 @@
             <form action="/" id="joinForm">
                 <div class="wrap-input">
                     <label>이메일</label>
-                    <input type="text" class="input-txt" id="email" name="email" placeholder="codeit@codeit.com">
+                    <input type="text" class="input-txt join" id="email" name="email" placeholder="codeit@codeit.com">
                     <p id="emailErrorText" class="txt-wrong"></p>
                 </div>
                 <div class="wrap-input">
